[package]
name = "actix-web-prom"
version = "0.9.1"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>", "kioqq <kioqq@pm.me>"]
edition = "2021"
description = "Actix Web middleware to expose Prometheus metrics"
documentation = "https://docs.rs/actix-web-prom"
repository = "https://github.com/nlopes/actix-web-prom.git"
keywords = ["actix", "actix-web", "middleware", "prometheus", "web"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore", ".github/", "README.tpl", "examples/"]

[dependencies]
strfmt = { version = "0.2.4" }
actix-web = { version = "4.9.0", default-features = false, features = ["macros"] }
futures-core = "0.3.31"
pin-project-lite = "0.2.16"
prometheus = { version = "0.13.4", default-features = false }
regex = "^1.11.1"
log = "0.4.25"

[features]
process = ["prometheus/process"]
